--- a/config-service.properties
+++ b/config-service.properties
@@ -1,2 +1,2 @@
-config-service.URI=http://www.shop-app.com/qa
-config-service.Region=QA
+config-service.URI=http://www.shop-app.com/main
+config-service.Region=MAIN
